[metadata]
name = pip_audit
version = attr: pip_audit._version.__version__
description = A tool for scanning Python environments for known vulnerabilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/trailofbits/pip-audit
author = William Woodruff
author_email = william@trailofbits.com
license = Apache-2.0
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Security

[options]
packages = find:
install_requires =
    CacheControl[filecache]>=0.12.10
    cyclonedx-python-lib>=1.0.0,<3.0.0
    html5lib>=1.1
    packaging>=21.0.0
    pip-api>=0.0.28
    progress>=1.6
    resolvelib>=0.8.0
python_requires = >=3.7

[options.entry_points]
console_scripts =
    pip-audit = pip_audit._cli:audit

[options.extras_require]
dev =
    black>=22.3.0
    bump>=1.3.1
    coverage[toml]
    flake8
    interrogate
    isort
    mypy
    pdoc3
    pretend
    pytest
    pytest-cov
    types-html5lib
    types-requests
